===============================================================================
Tag Creator: mlevy
Developers:  mlevy, klindsay
Tag Date:    14 May 2018
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20180514
Tag Summary: Merge latest marbl_dev branch tag (n92) onto trunk

             1) POP changes
                - Running mean saved state comes from same restart file as
                  ecosys base tracers, not ciso
                - build-namelist checks value of CPL_I2O_PER_CAT and only
                  calls xmlchange if needed
                - Better pe layouts on hobart, remove references to yellowstone
                  in config_pes.xml
                - Add gx1v7 test to hobart_nag aux_pop_MARBL, and add a gx3v7
                  with the ecosystem on to prealpha (also hobart_nag)
                - performance_eval test works with ecosystem on
                - New river nutrient input file for gx3v7 to be consistent with
                  mapping files created April 30
             2) MARBL changes
                - New calcToFloor diagnostic

Testing:     aux_pop on cheyenne (intel), aux_pop_MARBL on hobart (nag, intel,
             and pgi)
             - all gx3v7 tests with ecosystem on fail NLCOMP and BASELINE due
               to new river nutrient input file
             - all gx3v7 tests on hobart fail NLCOMP and BASELINE due to new
               pe layout (so reverting river nutrient input will not be b4b
               on that machine)
             - gx1v7 hobart_intel test does not successfully run. PGI does
               run and nag has ~50% success rate (resubmitting failed nag
               test usually results in success)
             - all other tests pass

M       Externals_POP.cfg
M       bld/build-namelist
M       bld/namelist_files/namelist_defaults_pop.xml
M       cime_config/config_pes.xml
M       cime_config/testdefs/testlist_pop.xml
M       cime_config/testdefs/testmods_dirs/pop/performance_eval/user_nl_marbl