@@ -6,9 +6,9 @@ local_path = externals/CVMix
 required = True
 
 [MARBL]
-tag = trunk_tags/MARBL0_29_0
-protocol = svn
-repo_url = https://svn-ccsm-models.cgd.ucar.edu/MARBL
+tag = marbl0.29.0
+protocol = git
+repo_url = https://github.com/marbl-ecosys/MARBL
 local_path = externals/MARBL
 required = True
 
